// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms/Header default 1`] = `
.c2 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c4 {
  font-size: 5vw;
  font-weight: bold;
  color: #007f48;
  white-space: nowrap;
  overflow: hidden;
  margin: 0;
}

.c6 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #FFFBE8;
  border-bottom: solid 2px #babfbd;
  box-sizing: border-box;
  height: calc(8px * 6);
  padding: 0 calc(8px * 2);
}

.c0 a {
  color: #007f48;
  display: inline-block;
}

.c0 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .c1 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > .c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media (min-width:380px) {
  .c4 {
    font-size: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
  <h2
    className="c3 c4"
  >
    Title
  </h2>
  <div
    className="c5 c6"
  >
    <p>
      Right
    </p>
  </div>
</div>
`;

exports[`Storyshots Organisms/Header props left 1`] = `
.c2 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c4 {
  font-size: 5vw;
  font-weight: bold;
  color: #007f48;
  white-space: nowrap;
  overflow: hidden;
  margin: 0;
}

.c6 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #FFFBE8;
  border-bottom: solid 2px #babfbd;
  box-sizing: border-box;
  height: calc(8px * 6);
  padding: 0 calc(8px * 2);
}

.c0 a {
  color: #007f48;
  display: inline-block;
}

.c0 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .c1 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > .c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media (min-width:380px) {
  .c4 {
    font-size: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <p>
      Left
    </p>
  </div>
  <h2
    className="c3 c4"
  >
    Title
  </h2>
  <div
    className="c5 c6"
  >
    <p>
      Right
    </p>
  </div>
</div>
`;

exports[`Storyshots Organisms/Header props left is ArrowBtton and right is AddButton 1`] = `
.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 1em;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: 0;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
}

.c5 > svg {
  width: 24px;
  height: 24px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  background-color: #007f48;
  padding: 8px;
}

.c10 svg {
  width: 18px;
  height: 18px;
  display: block;
  margin: 0 6px 0 0;
}

.c10 svg > circle {
  fill: #fff !important;
}

.c10 svg > line {
  stroke: #007f48 !important;
}

.c10 span {
  display: block;
  color: #fff;
  font-weight: bold;
  line-height: 1em;
}

.c3 {
  display: inline;
  text-align: start;
  line-height: 0;
}

.c3 svg path {
  fill: #007f48 !important;
}

.c2 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c7 {
  font-size: 5vw;
  font-weight: bold;
  color: #007f48;
  white-space: nowrap;
  overflow: hidden;
  margin: 0;
}

.c9 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #FFFBE8;
  border-bottom: solid 2px #babfbd;
  box-sizing: border-box;
  height: calc(8px * 6);
  padding: 0 calc(8px * 2);
}

.c0 a {
  color: #007f48;
  display: inline-block;
}

.c0 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .c1 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > .c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > .c8 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media (min-width:380px) {
  .c7 {
    font-size: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <button
      className="c3 c4"
      onClick={[Function]}
    >
      <span
        className="c5"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
        name="arrow"
        size="24px"
      />
    </button>
  </div>
  <h2
    className="c6 c7"
  >
    Title
  </h2>
  <div
    className="c8 c9"
  >
    <button
      className="c10 c4"
      onClick={[Function]}
    >
      <span
        className="c5"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
        name="add"
        size="24px"
      />
      <span>
        追加
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Organisms/Header props right is AddButton 1`] = `
.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 1em;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c8:hover {
  cursor: pointer;
}

.c8:focus {
  outline: 0;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
}

.c9 > svg {
  width: 24px;
  height: 24px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  background-color: #007f48;
  padding: 8px;
}

.c7 svg {
  width: 18px;
  height: 18px;
  display: block;
  margin: 0 6px 0 0;
}

.c7 svg > circle {
  fill: #fff !important;
}

.c7 svg > line {
  stroke: #007f48 !important;
}

.c7 span {
  display: block;
  color: #fff;
  font-weight: bold;
  line-height: 1em;
}

.c2 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c4 {
  font-size: 5vw;
  font-weight: bold;
  color: #007f48;
  white-space: nowrap;
  overflow: hidden;
  margin: 0;
}

.c6 {
  width: calc(8px * 10);
  display: block;
  line-height: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #FFFBE8;
  border-bottom: solid 2px #babfbd;
  box-sizing: border-box;
  height: calc(8px * 6);
  padding: 0 calc(8px * 2);
}

.c0 a {
  color: #007f48;
  display: inline-block;
}

.c0 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .c1 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > .c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media (min-width:380px) {
  .c4 {
    font-size: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
  <h2
    className="c3 c4"
  >
    Title
  </h2>
  <div
    className="c5 c6"
  >
    <button
      className="c7 c8"
      onClick={[Function]}
    >
      <span
        className="c9"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
        name="add"
        size="24px"
      />
      <span>
        追加
      </span>
    </button>
  </div>
</div>
`;
